updating portfolio copy

--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -4,7 +4,7 @@ meta_description: 'Portfolio example by Kyle Langford for Bally Ribbon Mills sit
 title: Bally Ribbon Mills
 description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
-last-edit: 10.31.19
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Adam Hoyle
@@ -33,56 +33,61 @@ related:
           <div class="caption"></div>
         </div>
 
-        <h4>Drupal Site Design and Development.</h4>
+        <h4>Process Driven Design</h4>
 
         <p>
           <strong>Ask</strong> Bally Ribbon Mills produces a wide variety of
           narrow woven fabrics, webbing, tapes and custom fabrication. They do
           confidential work for the government but also have public clients like
-          NASA. (Sidenote: They made the descent parachute for one of the Mars
-          rovers). Bally wanted a Drupal website to manage and showcase their
-          product information and capabilities.
+          NASA. They made the parachute for the mars rover. 
         </p>
 
         <p>
-          <strong>Contribution</strong> I was initialy hired by Brunello to do soup to nuts web sites. I did several of these but the those most successful was Bally Ribbon Mills. I worked with Adam Hoyle (Project Manager) to give Bally an authoritative and clearly laid out site that made connecting with clients easy compared to competitors. I produced the design work which included sitemaps, wireframes, moodboards, and full-page mockups. Site development was done by me using Drupal 7 CMS.
+          <strong>Setting Goals</strong> Bally wanted a website to manage and showcase their product information and capabilities. I worked to give Bally an authoritative and clearly organized site and product library. Adam and I  performed qualitative research to gather site goals and aesthetic taste. I produced the design work which included information architecture, branding, and design. I implemented the site in Drupal 7.
         </p>
 
-        <h5>Sitemap</h5>
+        <h5>Information Architecture</h5>
+
+        <p>Part of my process is to audit the existing content and produce a content outline and original sitemap. Using our primary goals as a guide we will reorganize the sitemap making the content easy to find.</p>
+
         <div class="specimen stretch">
           {{picture "projects/brm/brm-sitemap_v1.jpg"}}
+          <div class="caption">Produced by: Kyle Langford</div>
         </div>
 
         <h5>Wireframes</h5>
+
+        <p>In addition to the content audit I like to break down pages into components. In this case the existing site was very minimal. So we needed to show bally how we would present content, specifically on the homepage in addition to a product template. This is a good exercise to block out different page types which helps with creating the data schema as well as the final design. This site was designed before RWD so it only has desktop sizing.</p>
+
         <div class="specimen">
           <div class="stack">
           {{picture "projects/brm/brm-wires_page_1.png"}}
           {{picture "projects/brm/brm-wires_page_3.png"}}
           </div>
+          <div class="caption">Produced by: Kyle Langford</div>          
         </div>
 
-        <h5>Moodboards</h5>
+        <h5>Branding</h5>
+        <p>I like to use moodboards to hone in on the clients vision for the site without making a full set of comps. The goal is not to produce a final design but capture the essence of a look. In this case Bally Ribbon came to us with very little brand pressedence and relied on us to create a visual language for them.</p>
+
+        <div class="specimen">
+          {{picture "projects/brm/square-2.jpg"}}
+          <div class="caption" style="text-align:center;">Produced by: Kyle Langford</div>
+        </div>
+
         <div class="specimen">
           {{picture "projects/brm/brm_tile-1.png"}}
-          <div class="caption"></div>
+          <div class="caption">Moodboard Produced by: Kyle Langford</div>
         </div>
 
         <div class="specimen">
            {{picture "projects/brm/brm_tile-2.png"}}
-          <div class="caption"></div>
+          <div class="caption">Moodboard Produced by: Kyle Langford</div>
         </div>
 
         <div class="specimen">
            {{picture "projects/brm/design-homepage_v1.jpg"}}
-          <div class="caption"></div>
-        </div>
-
-        <h5 style="text-align:center;">Logo Design</h5>
-        <div class="split">
-          <div class="specimen flex flex-align--center">
-           <div class="paper">{{picture "projects/brm/square-2.jpg"}}</div>
-           <div class="paper">{{picture "projects/brm/square-3.jpg"}}</div>
-          </div>
+          <div class="caption">Homepage Mockup Produced by: Kyle Langford</div>
         </div>
 
         {{> credits}}
