--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -4,13 +4,13 @@ meta_description: 'Portfolio example by Kyle Langford for Drizly Email Building 
 title: Drizly
 description: Application Design and Development
 attribution: Work done at Raskyl
-last-edit: 10.31.19
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Kyle Langford
-    title: UX Developer
+    title: Designer and Developer
   - name: Rachel Sorkin
-    title: Partner, Designer
+    title: Designer
 related:
   - title: Demand Response Calculator
     description: Enviromental Signage and Wayfinding.
@@ -32,31 +32,27 @@ related:
           {{picture "projects/drizly/device-mockup-default.png" "" "eager"}}
         </div>
 
-        <h4>Design and Generate HTML Emails</h4>
+        <h4>Standardizing Visual Language</h4>
 
         <p>
-          <strong>Ask </strong> We had been coding emails for Drizly for several months. I designed a monthly calendar email and regularly built and designed HTML emails with the help of my partner Rachel Sorkin. We proposed a component based design system to help streamline their email production.
+          <strong>Ask </strong> We had been coding emails for Drizly for several months. I designed a monthly calendar email and regularly built and designed HTML emails with the help of my partner Rachel Sorkin. In order to help them lower cost and streamline the email design process we proposed a component based design system and application to build, store and generate the HTML. 
         </p>
 
         <div class="specimen stretch">
           {{picture "projects/drizly/email-spread.jpg"}}
+          <div class="caption">Email designs produced by: Kyle Langford and Rachel Sorkin</div>
         </div>
 
         <p>
-          <strong>Outcome</strong> There was a lot of commonalities in the
-          emails we built. I proposed that we design a library of reusable
-          templates based on their existing email designs. We boiled the emails
-          down to a dozen or so components. I designed and built a UI for
-          arranging these templates and populating them with content. This app
-          would render the HTML in a preview panel and also allows you to export
-          the generated HTML, which we would place into Litmus and eventually
-          into ExactTarget.
+          <strong>Outcome</strong> There were a lot of commonalities in the
+          emails we built. Rachel and I consolidated their emails into a library of a dozen or so reusable templates. I coded and tested the components before integrating them with our system. I designed and built a UI for arranging these templates and populating them with content. This app would render the HTML in a preview panel in real time and also allow you to export the generated HTML, which we would place into Litmus and eventually into ExactTarget.
         </p>
 
-        <h5>Drag and Drag, Updates in Real Time</h5>
+        <h5>Drag and Drag Components, Updates in Real Time</h5>
 
         <div class="specimen stretch">
           {{picture "projects/drizly/device-mockup-project.png"}}
+          <div class="caption">UI designed and built by: Kyle Langford</div>
         </div>
 
         <h5 style="text-align: center;">Example Email</h5>
