--- a/src/templates/pages/work/environmental-design.html
+++ b/src/templates/pages/work/environmental-design.html
@@ -4,7 +4,7 @@ meta_description: 'Portfolio example by Kyle Langford for the Cambridge Public L
 title: Cambridge Public Library
 description: Environmental Design
 attribution: Work done at Wojciechowski Design
-last-edit: 10.31.19
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Tom Wojciechowski
@@ -126,23 +126,18 @@ related:
               src="../assets/video/exterior-signs-spin.webm"
               type="video/webm"
             />
-            <!-- <source
-              src="../assets/video/video-player-workout.mp4"
-              type="video/mp4"
-            /> -->
-
             Sorry, your browser doesn't support embedded videos.
           </video>
         </div>
 
         <div class="specimen stretch">
           {{picture "projects/cpl/outside.jpg"}}
-          <div class="caption">Reverse channel letters on canopy.</div>
+          <div class="caption">Exterior sign locations.</div>
         </div>
 
         <div class="specimen stretch">
           {{picture "projects/cpl/garage.jpg"}}
-          <div class="caption">Garage entrance</div>
+          <div class="caption">Garage entrance (Budget cuts!)</div>
         </div>
 
         <div class="" data-barba-namespace="next"></div>
