--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -4,17 +4,17 @@ meta_description: 'Portfolio example by Kyle Langford for Elev8d Fitness Angular
 title: Elev8d Fitness
 attribution: Work done at Brunello, Inc.
 description: UI Design and Angular Development
-last-edit: 10.31.19
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Nicole Baltzer
     title: Partner
   - name: Jason Fournier
-    title: Project Designer
+    title: Designer
   - name: Kyle Langford
-    title: UX Developer
+    title: Designer and Developer
   - name: Christian Gonzalez
-    title: Backend Developer
+    title: Developer
 related:
   - title: Cambridge Public Library
     description: Enviromental Signage and Wayfinding.
@@ -41,21 +41,22 @@ related:
         <p>
           <strong>Ask</strong> Elev8d Fitness was in trouble, they had a good
           idea but a terribly implemented web app. Elev8d provided users with a
-          special type of guided yoga workout as well as full-length workout
-          content. They needed a major refresh but at the same time needed a
-          code rebuild. Many of the features they wanted to implemnt were deemed
-          "impossible" due to how the code was originally written.
+          special type of guided workout as well as full-length video
+          content. They needed a major refresh but at the same time needed sound functionality. Many of the features (Like pausing the video!) they wanted to implement were deemed "impossible" due to how the code was originally written.
         </p>
+
+        <p><strong>Challenge</strong>  An important user hueretic is the visibility of system status and giving the user freedom to control the UI. In this case the original player suffered from not showing the user where in the workout and making it very difficult to move between sections which were linked to a timer.<p>
 
         <p>
           <strong>Outcome</strong> We were able to design a player that
           simplified the UI and provided the seamless playback experience that
           was expected. I provided technical leadership to design the
           functionality and UI of the video component. Jay's focus was
-          intergrating branding elements and Christian was rebuilding the video
-          API service. I rebuilt the angular video player and playlist and designed
+          integrating branding elements and Christian was rebuilding the video
+          API service. I rebuilt the angular video player and playlist and designed the player UI, 
           transitions and animations to give a more native app feel.
         </p>
+
 
         <div class="specimen">
           {{picture "projects/elev8d/device-mockup-playlist.png"}}
