--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -2,9 +2,9 @@
 meta_title: 'HLE Design and Frontend Development | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford on Healthly Living Engine application design and development while at Brunello, inc'
 title: Healthly Living Engine
-description: Drupal 7/8 and Product Design
+description: Theme Architecture and UX Design
 attribution: Work done at Brunello, Inc for Linkwell Health.
-last-edit: 10.31.19
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Adam Hoyle
@@ -45,19 +45,35 @@ related:
 
         <p>
           <strong>Ask</strong> A centralized content publishing platform for
-          recipes, healthy articles, and coupons. The content api feeds
+          healthy articles, recipes, and coupons. The content api feeds
           microsites that can be customized in look and content. The Platform 
           also provides a suite of content creation tools, such as lineups, reporting,
-          workflows, and project tracking. Originally called LMS this platform was built in Drupal 7. 
-          A major aspect of this project was to migrate to Drupal 8.
+          workflows, and project tracking. Originally called LMS this platform was built in Drupal 7 and has seen one major migration and rebasing to Drupal 8.
         </p>
 
+        <p><strong>Identifying Actionable Items</strong> Identifying Actionable Items
+
+Collecting Data
+UX Audit -> Professional Evaluation 
+Site Analytics -Heatmaps
+User Research - Screen recordings, A/B Testing, Qualitative Feedback
+
+Organize / Prioritize Items base on impact and level of effort. 
+
+Create a development schedule 
+
+-> I think in data driven design, having ways to validate success is important
+</p>
+
+<p> Designing for empathy</p>
+
+
+
+        <p><strong>Validating Success</strong></p>
+
+
         <p>
-          <strong>Outcome</strong> We designed a flexible theme that is
-          easily customizable and updatable. Content can be packaged and sent to
-          microsites and controlled from a centralized point. We designed and built 
-          backend themes and worflow tools to create content and reports. We
-          continue to develop features and push the product into the future.
+          <strong>Iterate</strong> This is a long standing project where I started with the UI design, user research and theme development. Overtime that responsbility shifted to managing the platforms theming layer. We reguraly build and deploy microsites using the  base themes I built as well as create fully custom sites that take advantage or our data layer. Content can be packaged and sent to microsites and controlled from a centralized point. We designed and built admin themes and worflow tools to create content and reports. We continue to develop features and push the product into the future.
         </p>
 
         <h5>Content Publishing Platform</h5>
@@ -67,8 +83,11 @@ related:
           <div class="caption">Design By: Kyle Langford</div>
         </div>
 
-        <div class="specimen">
-          {{picture "projects/hle/optum-mobile.png"}}
+        <h5>Customizable Base Themes: Plansite 3.0</h5>
+
+        <div class="specimen stretch">
+          {{picture "projects/hle/colors.png"}}
+          <div class="caption"></div>  
         </div>
 
         <div class="specimen">
@@ -80,49 +99,49 @@ related:
               {{picture "projects/hle/device-mockup-shoppinglist.png"}}
             </div>
           </div>
-          <div class="caption"></div>
         </div>
 
-        <h5>Customizable Base Themes "Kale" - Plansite 3.0</h5>
-
-        <div class="specimen stretch">
-          {{picture "projects/hle/colors.png"}}
-          <div class="caption"></div>  
-        </div>
 
         <div class="specimen stretch">
           {{picture "projects/hle/getgoodliving-screen.png"}}
-           <div class="caption">Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>    
+           <div class="caption">Plansite 3.0 (Kale) Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>    
         </div>
 
         <div class="specimen stretch">
           {{picture "projects/hle/mmm-screen.png"}}
-           <div class="caption">Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>    
+           <div class="caption">Plansite 3.0 (Kale) Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>    
         </div>
 
         <h5>A New Customizable Base Theme "Quinoa"</h5>
 
         <div class="specimen stretch">
           {{picture "projects/hle/renew.png"}}
-           <div class="caption">Kyle Langford - Theme Development, Jason Fournier - Design</div>    
+           <div class="caption">Plansite 3.0 (Quinoa) Kyle Langford - Theme Development, Jason Fournier - Design</div>    
         </div>
 
-        <h5>Fully Custom Theme with Imported React Components</h5>
+        <h5>Custom Theme with Imported React Components</h5>
+
+        <div class="specimen">
+          {{picture "projects/hle/optum-mobile.png"}}
+        </div>
 
         <div class="specimen stretch">
           {{picture "projects/hle/optum-store-blog.png"}}
            <div class="caption">Kyle Langford - Theme Development</div>
         </div>
 
-        <h5>Custom Backend</h5>
-
-        <div class="specimen stretch">
-          {{picture "projects/hle/device-mockup-reports.png"}}
-        </div>
+        <h5>Custom Backend Theme</h5>
 
         <div class="specimen stretch">
           {{picture "projects/hle/device-mockup-content.png"}}
-          <div class="caption">Kyle Langford - Theme Development and Design</div>
+          <div class="caption">Admin Theme Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>   
+        </div>
+
+        <h5>Custom Reporting</h5>
+
+        <div class="specimen stretch">
+          {{picture "projects/hle/device-mockup-reports.png"}}
+          <div class="caption">Admin Theme Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>   
         </div>
 
         {{> credits}}
