--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -2,9 +2,9 @@
 meta_title: 'PAW Design and Drupal Development | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford on Princeton Alumni Weekly Magazine site design and development while at Brunello, inc'
 title: PAW
-description: Layout Design and Frontend Development
+description: Process and Frontend Development
 attribution: Work done at Brunello, Inc.
-last-edit: 10.31.19
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Nicole Baltzer
@@ -36,7 +36,7 @@ related:
           {{picture "projects/paw/device-mockup-article.png" "" "eager"}}
         </div>
 
-        <h4>Digital Magazine Publishing</h4>
+        <h4>Process allows for systemic and repeatable to approach to success.</h4>
 
         <p>
           <strong>Ask</strong> The alumni magazine was looking for a design more
@@ -48,17 +48,20 @@ related:
         </p>
 
         <p>
-          <strong>Outcome</strong> We had struggled to manage the wireframing
+          <strong>Challenge</strong> We had struggled to manage the wireframing
           and design phase in previous projects. Our clients wanted to see
-          mockups in all screen size for all the pages we designed. I provided
+          mockups in all screen size for all the pages we designed. 
+          With this project I changed how we as a compan approached full site designs. I provided
           leadership in creating a process to limit the amount of static comps
           to a few pages types. I would design reusable HTML components and
           styles that would be used to layout all the remaining pages. This
-          process allowed for more iteration and allowed us to focus our time
-          better. I was responsible for creating the sitemap, mobile-priority,
+          process allowed for more iteration and allowed us to focus our time.</p>
+          
+
+        <p>
+          <strong>Outcome</strong>I was responsible for creating the sitemap, mobile-priority,
           wireframes, and working prototype. I produced all the front-end
-          production code, much of which was recycled from the prototype.
-        </p>
+          production code, much of which was recycled from the prototype.</p>
 
         <div class="specimen">
           {{picture "projects/paw/way-back.jpg"}}
