--- a/src/templates/pages/work/pennstater.html
+++ b/src/templates/pages/work/pennstater.html
@@ -4,7 +4,7 @@ meta_description: 'Portfolio example by Kyle Langford for PennStater Magazine, w
 title: PennStater Magazine
 description: Drupal 8 Development
 attribution: Work done at Brunello, Inc.
-last-edit: 12.23.21
+last-edit: 1.19.22
 back-url: /work/all
 team:
   - name: Nicole Baltzer
@@ -12,7 +12,7 @@ team:
   - name: Jason Fournier
     title: Designer
   - name: Kyle Langford
-    title: UX Developer
+    title: Lead Developer
   - name: Christian Gonzalez
     title: Drupal Developer
 related:
@@ -37,14 +37,14 @@ related:
           {{picture "projects/penn/penn-screen.png" "" "eager"}}
         </div>
 
-        <h4>Alumni Magazine</h4>
+        <h4>A bridge between Design and Development</h4>
 
         <p>
           <strong>Ask</strong> Looking for a fresh new design and website PennStater contracted us to make it happen. 
         </p>
 
         <p>
-          <strong>Outcome</strong> Having consulted in the design phases, moving to development was a smooth process. For this project I took the develpment lead and worked with our backend developer Christian to delegate and build out the site. My main contribution was the frontend theme and site building. Worked on estimate and initial pitch.
+          <strong>Contribution</strong> Having consulted in the research and design phases moving to development was a smooth process. For this project I took the development lead and worked with our backend developer Christian to delegate and build out the site. My main contribution was the frontend theme and site building. I worked with our project lead, designer and developer to ensure our vision was brought to life on time and on budget which had been a big challenge for us on full site projects. 
         </p>
 
         <div class="text--center button-group">
