--- a/src/templates/partials/back.html
+++ b/src/templates/partials/back.html
@@ -2,7 +2,7 @@
 <section class="mast-head">
   <nav class="position-top-left">
     <a href="{{back_url}}" class="button--previous"
-      >[<span>KL:<span>.../projects</span></span
+      >[<span>kylelangford:<span>.../projects</span></span
       >]$ {{back_text}}</a
     >
   </nav>
