--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -257,6 +257,7 @@ ul.portfolio {
 
   padding: 4px;
   border: 3px solid transparent;
+  letter-spacing: .025em;
 
   &:focus {
     padding: 4px;
@@ -267,7 +268,7 @@ ul.portfolio {
     font-size: 19px;
     font-weight: 800;
     padding: 0 4px;
-    color: $red-eye;
+    // color: $red-eye;
 
     span {
       color: $white;
