--- a/src/templates/pages/bookmarks.html
+++ b/src/templates/pages/bookmarks.html
@@ -8,7 +8,8 @@ back_text: $ cd ..
 <header class="container size-to-window bookmarks">
   <div class="row flex flex-align--center flex--justify fill-height">
     <nav class="position-top-left">
-      <a href="{{back_url}}" class="button--previous">{{back_text}}</a>
+      <a href="{{back_url}}" class="button--previous">[<span>kylelangford:<span>.../bookmarks</span></span
+      >]{{back_text}}</a>
     </nav>
 
     <div class="column two-thirds">
@@ -25,6 +26,19 @@ back_text: $ cd ..
     <div class="column two-thirds">
       <h3 class="list-title">Design</h3>
       <ul class="bookmarks">
+        <li class="list__item">
+          <a href="https://uxdesign.cc/beyond-empathy-in-design-f0f294c977b6">Beyond empathy in design</a>
+        </li>
+        <li class="list__item">
+          <a href="https://xd.adobe.com/ideas/perspectives/leadership-insights/why-i-dont-believe-in-empathic-design-don-norman/"
+            >Why I Don’t Believe in Empathic Design</a
+          >
+        </li>
+        <li class="list__item">
+          <a href="https://www.nngroup.com/articles/empathy-mapping/"
+            >Empathy Mapping: The First Step in Design Thinking</a
+          >
+        </li>
         <li class="list__item">
           <a href="https://alistapart.com/article/responsive-web-design"
             >Responsive Web Design - An A List Apart Article</a
