--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -26,7 +26,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
 
   <div class="row flex flex-align--center fill-height pad-default">
     <div class="column two-thirds animate fade-in">
-      <h2>Design + Development</h2>
+      <h2>Creative Technology</h2>
       <p class="text--large">
         My name is Kyle Langford I have over 10 years of professional experience designing and developing online websites. I focus on creating easy to use interfaces and writing clean human-readable code. I am passionate about learning new skills and developing my process. I have a positive attitude and enjoy bringing ideas to life.
       </p>
@@ -128,11 +128,8 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       <p class="list-title">Technology</p>
       <ul class="pretty">
         <li>Drupal CMS</li>
-        <li>Shopify E-Commerce</li>
-        <li>Wordpress CMS</li>
-        <li>Angular, AngularJS</li>
         <li>ReactJS</li>
-        <li>Web Hosting</li>
+        <li>LAMP</li>
       </ul>
     </div>
   </div>
@@ -142,7 +139,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <!-- Contact Info -->
   <header class="row pad-default">
     <div class="column">
-      <h2 class="section__title">Info</h2>
+      <h2 class="section__title">Find Me.</h2>
     </div>
   </header>
 
