updating portfolio copy

--- a/src/templates/partials/intro.html
+++ b/src/templates/partials/intro.html
@@ -8,7 +8,7 @@
         class="button--previous"
         href="/work/all"
       >
-        [<span>KL:<span>.../work</span></span
+        [<span>kylelangford:<span>.../work</span></span
         >]$ cd ..
       </a>
     </nav>
