--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -145,7 +145,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
     <!-- Get in Touch -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Get in Touch</p>
-      <ul class="pretty">
+      <ul class="pretty with-icons">
         <li class="list__item">
           <a href="mailto:kyle@raskyl.com"
             ><span class="icon icons-list icon-mail"></span>Email</a
@@ -162,7 +162,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
     <!-- Locations -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Links</p>
-      <ul class="pretty">
+      <ul class="pretty with-icons">
 
         <li class="list__item">
           <a href="/work/all"
@@ -189,7 +189,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
     <!-- Misc Links -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">More Links</p>
-      <ul class="pretty">
+      <ul class="pretty with-icons">
         <li class="list__item">
           <a href="/bookmarks"
             ><span class="icons-list icon-bookmark"></span>Bookmarks</a
