--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -38,13 +38,10 @@ related:
         <p>
           <strong>Ask</strong> Bally Ribbon Mills produces a wide variety of
           narrow woven fabrics, webbing, tapes and custom fabrication. They do
-          confidential work for the government but also have public clients like
-          NASA. They made the parachute for the mars rover. 
-        </p>
+          confidential work for the government but also have public clients like NASA. They made the parachute for the mars rover.</p>
 
         <p>
-          <strong>Setting Goals</strong> Bally wanted a website to manage and showcase their product information and capabilities. I worked to give Bally an authoritative and clearly organized site and product library. Adam and I performed qualitative research to gather site goals and aesthetic taste. I produced the design work which included information architecture, branding, and web design. I implemented the site in Drupal 7.
-        </p>
+          <strong>Setting Goals</strong> Bally wanted a website to manage and showcase their product information and capabilities. I worked to give Bally an authoritative and clearly organized site and product library. Adam and I performed qualitative research to gather site goals and aesthetic taste. I produced the design work which included information architecture, branding, and web design. I implemented the site in Drupal 7.</p>
 
         <h5>Information Architecture</h5>
 
