--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -63,6 +63,12 @@ related:
           </div>
         </div>
 
+        <div class="text--center button-group">
+          <a href="http://drizly-app.kylelangford.com" class="button button--primary"
+            >View Demo</a
+          >
+        </div>
+
         {{> credits}}
       </article>
     </div>
