--- a/src/templates/pages/work/environmental-design.html
+++ b/src/templates/pages/work/environmental-design.html
@@ -57,6 +57,7 @@ related:
 
         <div class="specimen paper">
           {{picture "projects/cpl/p-cpl-diagram.jpg"}}
+          <div class="caption">Drawing by Kyle Langford</div>
         </div>
 
         <div class="specimen">
@@ -86,7 +87,7 @@ related:
 
         <div class="specimen stretch">
           {{picture "projects/cpl/signs.jpg"}}
-          <div class="caption">Drawing Elevation.</div>
+          <div class="caption">Drawing Elevation by Kyle Langford</div>
         </div>
 
         <div class="specimen">
@@ -98,7 +99,7 @@ related:
         </div>
         <div class="specimen stretch">
           {{picture "projects/cpl/profile.jpg"}}
-          <div class="caption">Drawing Elevation.</div>
+          <div class="caption">Drawing Elevation by Kyle Langford</div>
         </div>
 
         <div class="specimen">
