--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -49,15 +49,9 @@ related:
 
         <p>
           <strong>Challenge</strong> We had struggled to manage the wireframing
-          and design phase in previous projects. Our clients wanted to see
+          and design phase in previous projects for RWD. Our clients wanted to see
           mockups in all screen size for all the pages we designed. 
-          With this project I changed how we as a compan approached full site designs. I provided
-          leadership in creating a process to limit the amount of static comps
-          to a few pages types. I would design reusable HTML components and
-          styles that would be used to layout all the remaining pages. This
-          process allowed for more iteration and allowed us to focus our time.</p>
-          
-
+          With this project I changed how we approached RWD designs as a company. I design a process in creating a process to limit the amount of static comps. I would design reusable HTML components and styles that would be used to layout all the pages not covered. This changed how we would approach building the sites and overall led to more efficent builds. This process also allowed for more iteration and time to be spent on design.</p>
         <p>
           <strong>Outcome</strong>I was responsible for creating the sitemap, mobile-priority,
           wireframes, and working prototype. I produced all the front-end
@@ -89,16 +83,10 @@ related:
           />
         </div>
 
-        <h5>Research Phase</h5>
-
-        <div class="specimen">
-          {{picture "projects/paw/style-tile-1.png"}}
-          <div class="caption">Inspiration Style Collage.</div>
-        </div>
-
         <h5>IA: Sitemap</h5>
         <div class="specimen stretch">
           {{picture "projects/paw/sitemap_v1.jpg"}}
+          <div class="caption">Sitemap produced by: Kyle Langford</div>          
         </div>
 
         <h5>IA: Content Priority</h5>
@@ -129,16 +117,18 @@ related:
 
         <div class="specimen paper">
           {{picture "projects/paw/list-blocks.jpg"}}
+          <div class="caption">Drawing produced by: Kyle Langford</div>
         </div>
 
         <h5>Layout Design</h5>
         <div class="specimen stretch">
           {{picture "projects/paw/cpw-11.jpg"}}
-          <div class="caption"></div>
+          <div class="caption">Drawing produced by: Kyle Langford</div>
         </div>
 
         <div class="specimen">
           {{picture "projects/paw/wireframe-rwd-article-page.png"}}
+          <div class="caption">Drawing produced by: Kyle Langford</div>
         </div>
 
         <h5>HTML Prototype</h5>
