--- a/src/templates/pages/work/wind-journey.html
+++ b/src/templates/pages/work/wind-journey.html
@@ -2,7 +2,7 @@
 meta_title: 'Wind Journey Landing Page | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford for Wind Journey Landing Page , work done at Brunello Inc.'
 title: Wind Journey
-description: Storyboarding and Javascript Development
+description: Creative Direction and Development
 attribution: Work done at Brunello, Inc.
 last-edit: 1.19.22
 back-url: /work/all
@@ -10,7 +10,7 @@ team:
   - name: Adam Hoyle
     title: Project Manager
   - name: Kyle Langford
-    title: Project Designer, Developer
+    title: Designer and Developer
 related:
   - title: PennStater Alumni Magazine
     description: Design, Drupal Development
@@ -43,7 +43,7 @@ related:
         <h4>Creative Technology</h4>
 
         <p>
-          <strong>Ask </strong> Enel Green Power had an old scrolling flash animation that they wanted to update. The script was verbose and the style no longer matched the modern brand. This project was open ended and relied on us to provide direction. 
+          <strong>Ask </strong> Enel Green Power had an old scrolling flash movie that they wanted to make modern. The script was verbose and the style no longer matched the current branding. This project was open ended and relied on us to provide direction. 
         </p>
 
         <p>
@@ -57,10 +57,10 @@ related:
           {{picture "projects/egp/screen-top.png" "" "eager"}}
         </div>
 
-        <div class="specimen">
+<!--         <div class="specimen">
           {{picture "projects/egp/scene-3.png"}}
         </div>
-
+ -->
         <div class="specimen">
           {{picture "projects/egp/scene-2.png"}}
         </div>
@@ -73,6 +73,7 @@ related:
 
         <div class="specimen stretch paper">
           {{picture "projects/egp/design-comp.jpg"}}
+          <div class="caption">Drawing produced by: Kyle Langford</div>         
         </div>
 
         <div class="specimen stretch paper">
@@ -81,10 +82,12 @@ related:
 
         <div class="specimen stretch paper">
           {{picture "projects/egp/scene-1.png"}}
+          <div class="caption">Scene 1: Description, Sketch, Final Art</div>          
         </div>
 
         <div class="specimen stretch paper">
           {{picture "projects/egp/transitions.jpg"}}
+          <div class="caption">Drawing produced by: Kyle Langford</div>
         </div>
 
         <div class="text--center button-group">
