--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -73,6 +73,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>Wireframing</li>
         <li><a href="https://www.nngroup.com/articles/ten-usability-heuristics/">User Heuristics</a></li>
         <li><a href="https://www.w3.org/TR/WCAG21/">WAGC2.1 Accessibility</a></li>
+        <li><a href="https://www.epa.gov/accessibility/what-section-508">508 Compliance</a></li>
       </ul>
     </div>
     <!-- Design Tools -->
