--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -42,10 +42,10 @@ related:
           <strong>Ask</strong> Elev8d Fitness was in trouble, they had a good
           idea but a terribly implemented web app. Elev8d provided users with a
           special type of guided workout as well as full-length video
-          content. They needed a major refresh but at the same time needed sound functionality. Many of the features (Like pausing the video!) they wanted to implement were deemed "impossible" due to how the code was originally written.
-        </p>
+          content. They needed a major refresh but at the same time needed sound functionality. Many of the features (Like pausing the video!) they wanted to implement were deemed "impossible" due to how the code was originally written.</p>
 
-        <p><strong>Challenge</strong>  An important user hueretic is the visibility of system status and giving the user freedom to control the UI. In this case the original player suffered from not showing the user where in the workout and making it very difficult to move between sections which were linked to a timer.<p>
+        <p>
+          <strong>Challenge</strong>  An important user hueretic is the visibility of system status and giving the user freedom to control the UI. In this case the original player suffered from not showing the user where in the workout and making it very difficult to move between sections which were linked to a timer.<p>
 
         <p>
           <strong>Outcome</strong> We were able to design a player that
@@ -53,10 +53,7 @@ related:
           was expected. I provided technical leadership to design the
           functionality and UI of the video component. Jay's focus was
           integrating branding elements and Christian was rebuilding the video
-          API service. I rebuilt the angular video player and playlist and designed the player UI, 
-          transitions and animations to give a more native app feel.
-        </p>
-
+          API service. I rebuilt the angular video player and playlist and designed the player UI, transitions and animations to give a more native app feel.</p>
 
         <div class="specimen">
           {{picture "projects/elev8d/device-mockup-playlist.png"}}
