updating portfolio copy

--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -133,7 +133,7 @@ related:
 
         <h5>HTML Prototype</h5>
         <p>
-          I devised a simple template system that I used to create the
+          I designed a component template system that I used to create the
           prototype. We ended with 41 pages made with approx 30 components with
           about 100 variations. Below is a working version of that prototype,
           follow the orange dots for active links.
